@@ -30,14 +30,10 @@ image-missing-action = auto-create
 video = 0
 record-all = 1
 
-[xen-options]
-use-ide-devices = 0
-size = 800Mb
-memory = 512Mb
-fs = ext3
-image = full
-mirror = http://en.archive.ubuntu.com/ubuntu
-
 [virt-options]
 size = 800
 memory = 512
+
+[vm-builder-options]
+mirror = http://en.archive.ubuntu.com/ubuntu
+
