@@ -1,7 +1,0 @@
-Hello {$user},
-
-Your test {$test} has failed :(
-
-You can find more info here: {$results}
-
-Good luck next time!
