@@ -1,7 +1,0 @@
-Hello {$user},
-
-Your test {$test} has finished!
-
-You can see the results here: {$results}
-
-Have a nice day!
