@@ -1,59 +1,0 @@
-#
-# Configuration file for the Xen instance {$hostname}, 
-# created by ANSTE on { scalar localtime }.
-#
-
-#
-#  Kernel + memory size
-#
-{
-    $OUT.= "kernel      = '$kernel'";
-}
-{
-    $OUT.= "ramdisk     = '$initrd'";
-}
-memory      = '{$memory}'
-
-#
-#  Disk device(s).
-#
-
-{ 
-  my $img_path = "file:$path/domains/$hostname";
-  if ($swap) {
-    $OUT .= "root        = '/dev/$device" . "2 ro'\n";
-    $OUT .= "disk        = [ '$img_path/swap.img,$device" . "1,w',";
-    $OUT .=                " '$img_path/disk.img,$device" . "2,w' ]";
-  } 
-  else {
-    $OUT .= "root        = '/dev/$device" . "1 ro'\n";
-    $OUT .= "disk        = [ '$img_path/disk.img,$device" . "1,w' ]";
-  }
-}
-
-#
-#  Hostname
-#
-name        = '{$hostname}'
-
-#
-#  Networking
-#
-{ if ( $dhcp )
-  {
-    $OUT .= "dhcp        = 'dhcp'\n";
-    $OUT .= "vif         = [ '' ]";
-  }    
-  else
-  {
-    $OUT .= "vif         = [ $iface_list ]"; 
-  }
-}
-
-#
-#  Behaviour
-#
-on_poweroff = 'destroy'
-on_reboot   = 'restart'
-on_crash    = 'restart'
-
