@@ -1,1 +1,0 @@
-doc/examples/anste.conf
