@@ -1,40 +1,0 @@
-[global]
-system = Debian
-virtualizer = Xen
-
-[paths]
-images = /home/xen/domains
-logs = /tmp/anste-logs
-
-[ansted]
-port = 8000
-
-[master]
-port = 8001
-
-[comm]
-first-address = 10.6.7.10
-gateway = 10.6.7.1
-nat-iface = eth1
-
-[deploy]
-# auto-create | auto-download
-image-missing-action = auto-create
-
-[selenium]
-rc-jar = /home/josh/selenium-rc/selenium-server.jar
-browser = *firefox /home/josh/firefox/firefox-bin
-video = 1
-record-all = 1
-
-[xen-options]
-dir = /home/xen
-install-method = debootstrap
-size = 2.5Gb
-memory = 512Mb
-fs = ext3
-dist = sarge
-image = full
-kernel = /boot/vmlinuz-2.6.18-5-xen-686
-initrd = /boot/initrd.img-2.6.18-5-xen-686
-mirror = http://192.168.45.4/debian
