@@ -1,4 +1,5 @@
 HEAD
+    + Remove deprecated Xen stuff
     + Remove support for deprecated XML format
     + Proper use of upstart instead of /etc/init.d for networking and dhcp
     + Use File::Slurp instead of Perl6::Slurp
